# voivoi

./: .gitignore  .gitmessage  CLAUDE.md  README.md  TODO.md  main.py  pyproject.toml
.claude/: settings.local.json
.claude/commands/: check.md  test.md
.claude/skills/tdd/: SKILL.md
.github/workflows/: ci.yml
tests/: test_chat.py  test_cli.py
tests/chat/: test_audio.py  test_cli.py  test_listener.py  test_llm.py  test_stt.py  test_tts.py  test_vad.py  test_voice_chat.py  test_wav.py
tests/config/: test_loader.py  test_paths.py  test_schema.py
voivoi/: __init__.py  cli.py
voivoi/chat/: __init__.py  audio.py  chat.py  cli.py  listener.py  llm.py  orchestrator.py  repository.py  stt.py  tts.py  ui.py  vad.py  voice_chat.py  wav.py
voivoi/chat/audio/: __init__.py  adapter.py  listener.py  port.py  vad.py
voivoi/chat/domain/: models.py  paths.py  repository.py
voivoi/chat/llm/: __init__.py  adapter.py  port.py
voivoi/chat/stt/: __init__.py  adapter.py  port.py
voivoi/chat/tts/: __init__.py  adapter.py  port.py
voivoi/config/: __init__.py  cli.py  loader.py  paths.py  schema.py
