[project]
name = "voivoi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ollama>=0.4.8",
    "openai-whisper>=20240930",
    "pydantic>=2.12.5",
    "tomli-w>=1.2.0",
    "typer>=0.21.1",
]

[project.scripts]
voivoi = "voivoi.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.10",
]

[tool.coverage.run]
source = ["voivoi"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
